--- a/108590005_HW4_2/app/src/main/res/values/strings.xml
+++ b/108590005_HW4_2/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   -->
 
 <resources>
-    <string name="app_name">Implicit Intents</string>
+    <string name="app_name">108590005_HW4_2</string>
 
     <string name="edittext_uri">http://developer.android.com</string>
     <string name="button_uri">Open Website</string>
